// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionButton /> UI snapshots checkbox selected, without custom icon 1`] = `
.emotion-0 {
  border-radius: 4px;
  background-color: #FFFFFF;
  border: 1px solid #EDEDF0;
  box-shadow: 0px 8px 24px rgba(52, 51, 82, 0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
  padding: 1.5rem;
  margin-bottom: 1rem;
  width: 100%;
  text-align: left;
}

.emotion-0:hover {
  box-shadow: 0px 8px 24px rgba(52, 51, 82, 0.10);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  border: 1px solid;
  border-color: #332E54;
  background: #FFFFFF;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 350ms;
  transition: all 350ms;
  border-radius: 4px;
  background: #332E54;
  border-color: #332E54;
}

.emotion-4 svg {
  opacity: 0;
  -webkit-transition: all 350ms;
  transition: all 350ms;
}

.emotion-4 svg {
  opacity: 1;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.emotion-6 {
  display: block;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  margin-left: 1rem;
}

.emotion-9 {
  color: #524D6E;
  line-height: 1.5;
}

<button
  class="emotion-0 emotion-1"
  role="checkbox"
  type="button"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <svg
        class="emotion-6"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Checkmark Icon
        </title>
        <path
          d="M14.96 2L5.26 11.42L0.88 7.1L0 7.99L5.26 13.17L15.83 2.9L14.96 2Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-7 emotion-8"
    >
      <div
        class="emotion-9 emotion-10"
      >
        checkbox text
      </div>
    </div>
  </div>
</button>
`;

exports[`<OptionButton /> UI snapshots radio unselected, with icon node prop 1`] = `
.emotion-0 {
  border-radius: 4px;
  background-color: #FFFFFF;
  border: 1px solid #EDEDF0;
  box-shadow: 0px 8px 24px rgba(52, 51, 82, 0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
  padding: 1.5rem;
  margin-bottom: 1rem;
  width: 100%;
  text-align: left;
}

.emotion-0:hover {
  box-shadow: 0px 8px 24px rgba(52, 51, 82, 0.10);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  border: 1px solid;
  border-color: #332E54;
  background: #FFFFFF;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 350ms;
  transition: all 350ms;
  border-radius: 50%;
  width: 48px;
  height: 48px;
}

.emotion-4 svg {
  opacity: 0;
  -webkit-transition: all 350ms;
  transition: all 350ms;
}

.emotion-4 svg {
  opacity: 1;
  color: #332E54;
  fill: #332E54;
}

.emotion-6 {
  display: block;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  margin-left: 1rem;
}

.emotion-9 {
  color: #524D6E;
  line-height: 1.5;
}

<button
  class="emotion-0 emotion-1"
  role="radio"
  type="button"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <svg
        class="emotion-6"
        fill="none"
        height="48"
        viewBox="0 0 48 48"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Acne Glyph
        </title>
        <path
          clip-rule="evenodd"
          d="M21.9934 10.023C21.9934 11.1458 22.8885 12.0556 24.0048 12.0556C25.1212 12.0556 26.0259 11.1361 26.0259 10.023C26.0259 8.90985 25.1116 8 24.0048 8C22.8981 8 21.9934 8.90017 21.9934 10.023ZM23.1964 10.023C23.1964 9.57773 23.5525 9.20992 24.0048 9.20992C24.4572 9.20992 24.8229 9.56805 24.8229 10.023C24.8229 10.4779 24.4476 10.8457 24.0048 10.8457C23.5621 10.8457 23.1964 10.4779 23.1964 10.023ZM21.9934 37.9673C21.9934 39.0901 22.8885 40 24.0048 40C25.1212 40 26.0259 39.0804 26.0259 37.9673C26.0259 36.8542 25.1116 35.9443 24.0048 35.9443C22.8981 35.9443 21.9934 36.8445 21.9934 37.9673ZM23.1964 37.9673C23.1964 37.5221 23.5525 37.1543 24.0048 37.1543C24.4572 37.1543 24.8229 37.5221 24.8229 37.9673C24.8229 38.4222 24.4476 38.7901 24.0048 38.7901C23.5621 38.7901 23.1964 38.4222 23.1964 37.9673ZM37.9886 25.9262C36.8722 25.9262 35.9675 25.0164 35.9675 23.8936C35.9675 22.7708 36.8722 21.8706 37.9886 21.8706C39.105 21.8706 40 22.7805 40 23.8936C40 25.0067 39.105 25.9262 37.9886 25.9262ZM37.9886 23.0805C37.5363 23.0805 37.1705 23.4483 37.1705 23.8936C37.1705 24.3485 37.5363 24.7163 37.9886 24.7163C38.4409 24.7163 38.797 24.3485 38.797 23.8936C38.8066 23.4483 38.4409 23.0805 37.9886 23.0805ZM8 23.8935C8 25.0163 8.90466 25.9262 10.0211 25.9262C11.1374 25.9262 12.0421 25.0067 12.0421 23.8935C12.0421 22.7804 11.1374 21.8706 10.0211 21.8706C8.90466 21.8706 8 22.7707 8 23.8935ZM9.20301 23.8935C9.20301 23.4483 9.56872 23.0805 10.0211 23.0805C10.4734 23.0805 10.8391 23.4483 10.8391 23.8935C10.8391 24.3485 10.4734 24.7163 10.0211 24.7163C9.56872 24.7163 9.20301 24.3485 9.20301 23.8935Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="emotion-7 emotion-8"
    >
      <div
        class="emotion-9 emotion-10"
      >
        radio text
      </div>
    </div>
  </div>
</button>
`;
